k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-admin-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30006
  selector:
    app: InternRFC-app-project-admin
